# PyAttackForge

./: .env.example  .flake8  .gitignore  AGENTS.md  CHANGELOG.md  COVERAGE.md  DOCUMENTATION.md  README.md  SPEC.md  ci.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py  setupEnv.sh
.codex/: last_run_timestamp
.github/workflows/: master.yml
docs/attackforge/ssapi/: index.md  manifest.json  urls.txt
docs/attackforge/ssapi/markdown/: activateuser.md  addprojectmembershipadministrators.md  addtestcasestotestsuite.md  addtestcasetotestsuite.md  addusertogroup.md  advanced-query-filter.md  approveprojectrequestbyid.md  archivegroup.md  archiveportfolio.md  archiveproject.md  cancelprojectretestround.md  cloneproject.md  completeprojectretestround.md  createassetinlibrary.md  creategroup.md  createportfolio.md  createproject.md  createprojectnote.md  createprojectrequest.md  createprojecttestcase.md  createprojectworkspacenote.md  createremediationnote-1.md  createremediationnote.md  createscope.md  createtestcasenote.md  createtestsuite.md  createuser.md  createusers.md  createvulnerability.md  createvulnerabilitybulk.md  createvulnerabilitylibraryissue.md  createvulnerabilitywithlibrary.md  deactivateuser.md  destroyproject.md  downloadprojecttestcasefile.md  downloadprojecttestcasenotefile.md  downloadprojecttestcaseworkspacenotefile.md  downloadremediationnotefile.md  downloadtestsuitetestcasefile.md  downloadvulnerabilityevidence.md  (+90 more)
pyattackforge/: __init__.py  cache.py  client.py  config.py  exceptions.py  prev_client.py  transport.py
pyattackforge/resources/: __init__.py  assets.py  base.py  findings.py  groups.py  notes.py  projects.py  reports.py  users.py  writeups.py
tests/: conftest.py  helpers_artifacts.py  helpers_png.py  test_client.py
tools/: sync_attackforge_ssapi_docs.py
(+130 files in other folders)
