[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyattackforge"
version = "0.2.3"
description = "Python SDK for the AttackForge SSAPI"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "hackman238"}]
requires-python = ">=3.10"
classifiers = [
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Operating System :: OS Independent",
]
dependencies = [
  "httpx>=0.27",
  "h2>=4.1.0",
]

[project.urls]
Repository = "https://github.com/hackman238/PyAttackForge"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "python-dotenv>=1.0",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
markers = [
  "integration: live tests requiring ATTACKFORGE_BASE_URL and ATTACKFORGE_API_KEY",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyattackforge*"]
